# fengine

./: .clang-format  CMakeLists.txt  LICENSE  README.md  build.sh
engine/include/: fecs.h  renderer_2d.h
engine/src/: app.cpp  fecs.cpp  renderer_2d.cpp  window_sdl.cpp
resources/models/backpack/: backpack.mtl
resources/models/maxwell/: maxwell.mtl
resources/shaders/: basic.qsh
sandbox/: main.cpp
src/: main.cpp  renderer_2d.cpp  renderer_2d.h  window_sdl.cpp
src/fengine/: app.cpp  app.h  fecs.cpp  fecs.h
src/fengine/include/: app.h  renderer_2d.h  window_sdl.h
src/fengine/src/internal/model/: model.cpp  model.h
src/misc/: camera.cpp  camera.h  shader.cpp  shader.h
src/sandbox/: main.cpp
